adding footer and galery

--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,9 @@
 {
       
-      "home": "Home",
-      "welcome": "Welcome"
+      "home": "Inicio",
+      "welcome": "Binnvenido",
+      "Slow down": "Bajale al ritmo",
+      "and stay active": "y permanece activo",
+      "Contemporary Rural Eco House": "Casa Rural Ecológica Contemporánea"
 
   }
